# open_news

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  config.json  pyproject.toml  requirements.txt  setup.py  test.py
open-news/: get_article.py  get_url.py
open_news/: __init__.py  article_extractor.py  get_article.py  get_rss.py  get_url.py  main.py
